--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+
+<section class="general">
+  <img src="images/phones.png" alt="phones images" class="tlfs">
+  <section class="principal">
+    <section class="login">
+      <img src="images/brand.png" alt="instagram logo">
+      <button>
+        <img src="images/home.png" alt="home image">
+        <p>Log in</p>
+      </button>
+    </section>
+
+    <article class="content">
+      <img src="images/frame.png" alt="">
+      <div class="content-text">
+        <h1>Capture and Share<br>World's Moments</h1>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Instagram Capture and Share the World's Moments Take a picture or video, choose a filter to transform its look
+          and feel,
+          then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <article class="download">
+          <img src="images/badge-iphone.png" alt="Download for Apple">
+          <img src="images/badge-android.png" alt="Download for Android">
+        </article>
+    </article>
+    </div>
+
+
+
+
+  </section>
+</section>
+
+<footer>
+  <div class="enlaces">
+    <a href="#">About us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">Api</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+  </div>
+  <p>2014 Instagram</p>
+</footer>
+</body>
+
 </html>
