--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <div id=principal>
+    <img src="./images/phones.png" alt="Phones">
+    <section>
+      <div>
+        <img src="./images/brand.png" alt="Instagram Logo">
+        <a href="http://www.instagram.com">
+          <img src="./images/home.png" alt="instagram home"> Log In
+        </a>
+      </div>
+      <article>
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>
+          Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family. <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world. <br> <br>
+          Oh yeah, did we mention it's free?
+        </p>
+        <a href="https://apps.apple.com/es/app/instagram/id389801252">
+          <img src="./images/badge-iphone.png" alt="appstore link">
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es&gl=US">
+          <img src="./images/badge-android.png" alt="play store link">
+        </a>
+      </article>
+    </section>
+  </div>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li> &copy; 2014 Instagram
+    </ul>
+  </footer>
+
+</body>
+
+
+
 </html>
