--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <main>
+    <section>
+      <div id="left"><img class="phones" src="./images/phones.png" alt="a picture of two smartphones "></div>
+      <div id="right">
+        <div id="head">
+          <img class="logo" src="./images/brand.png" alt="web logo">
+          <a href="#" id="home"><img class="homeimg" src="./images/home.png" alt="home icon"> Log in</a>
+
+        </div>
+
+        <article>
+          <div id="backimg">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+            <br><br>
+          </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+            <br><br>
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+            <br><br>
+          </p>
+        </div>
+          <div id="downloads"><img class="iphone" src="./images/badge-iphone.png"
+              alt="Instagram Download icon for iphone">
+            <img class="android" src="./images/badge-android.png" alt="Instagram Download icon for Android ">
+          </div>
+
+        </article>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="grey">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+
+
+</body>
+
 </html>
