--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+  <container>
+    <section>
+      <img src="./images/phones.png" alt="Phones image">
+    </section>
+    <section class="section-one">
+      <div class="instagram-logo-login">
+        <img src="./images/brand.png" alt="Instagram's logo">
+        <div class="button">
+          <button>
+            <img src="./images/home.png" alt="Home's logo">
+            <p><strong>Log in</strong></p>
+          </button>
+        </div>
+      </div>
+      <div class="capture-moments">
+        <div class="background">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong> fast , beautiful</strong> and<strong> fun</strong> way to share your life with
+            friends and family. <br />
+            Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world. <br />
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="badges">
+          <img class="badge-iphone" src="./images/badge-iphone.png" alt="Iphone's badge">
+          <img src="./images/badge-android.png" alt="Android's badge">
+        </div>
+      </div>
+    </section>
+  </container>
+  <footer>
+    <nav>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+</body>
+
 </html>
