--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <main>
+      <div id="main-image">
+        <img src="./images/phones.png" alt="Phones">
+      </div>
+  
+      <div>
+        <header>
+          <img src="./images/brand.png" alt="Instagram">
+          <button><img src="./images/home.png" alt="icon-button">Log in</button>
+          </header>
+
+        <section>
+          <div>
+            <h1>Capture and Share<br>the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p> Oh yeah, did we mention it's free?</p>
+          </div>
+
+          <div id="buttons">
+            <a href="#applestore"><img src="./images/badge-iphone.png" alt="Download on the App Store">
+            </a>
+            <a href="#googlestore"><img src="./images/badge-android.png" alt="Get it on Google Play">
+            </a>
+          </div>
+        </section>
+      </div>
+
+    </main>
+
+    <footer>
+    <ul>
+      <li><a href="#about-us">About Us</a></li>
+      <li><a href="#support">Support</a></li>
+      <li><a href="#blog">Blog</a></li>
+      <li><a href="#press">Press</a></li>
+      <li><a href="#api">API</a></li>
+      <li><a href="#jobs">Jobs</a></li>
+      <li><a href="#privacy">Privacy</a></li>
+      <li><a href="#terms">Terms</a></li>
+      <li>&copy 2014 Instagram</li>
+    </ul>
+    </footer>
   </body>
 </html>
