--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="/styles/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+
+<body>
+  <div id="background">
+  </div>
+  <section>
+    <div>
+      <img src="images/phones.png" alt="Phones">
+    </div>
+    <div class="main">
+      <div class="header">
+        <img src="images/brand.png" alt="Instagram logo">
+        <button type="button">Log in</button>
+      </div>
+      <container class="text-container">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+          Oh yeah, did we mention it's free?
+        </p>
+      </container>
+      <button type="button">
+        <img src="images/badge-iphone.png" alt="Phones">
+      </button>
+      <button type="button">
+        <img src="images/badge-android.png" alt="Phones">
+      </button>
+    </div>
+  </section>
+</body>
+<footer>
+  <ul>
+    <il>About Us</il>
+    <il>Support</il>
+    <il>Blog</il>
+    <il>Press</il>
+    <il>API</il>
+    <il>Jobs</il>
+    <il>Privacy</il>
+    <il>Terms</il>
+    <il id = "copyright">&copy; 2014 Instagram</il>
+  </ul>
+</footer>
+
 </html>
