--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="flex-main">
+      <div class="flex-phones">
+        <img src="/images/phones.png" alt="phones-image">
+      </div>
+      <div class="flex-right-content">
+        <div class="brand-button-container">
+          <div class="brand-container">
+            <img src="/images/brand.png" alt="Instagram Home Logo">
+          </div>
+          <div class="button-container">
+            <a href="https://www.instagram.com/accounts/emailsignup/">
+              <img  src="/images/home.png" alt="Home Image">
+              Log in
+            </a>
+          </div>
+        </div>
+        <div class="text-container">
+          <h1 class="text-title">Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="stores-container">
+            <div class="ios-store-img">
+              <img src="/images/badge-iphone.png" alt="Download on the App Store">
+            </div>
+            <div>
+              <img src="/images/badge-android.png" alt="Get it on Google Play">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>   
+    <div class="footer-list">
+      <div class="flex-footer">
+        <ul class="list">
+          <li><a href="">About us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">Api</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+        </ul>
+      </div>
+      <span class="copyright">&copy; 2014 Instagram</span>
+    </div>
+    <div class="white-background"></div>
   </body>
 </html>
