--- a/index.html
+++ b/index.html
@@ -4,13 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css"/>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+  <header>
+
+    <section class="part1">
+      <img class="telefonos" src="https://github.com/SherilinM/lab-css-instagram-clone/blob/master/images/phones.png?raw=true" alt="fotodetelefonos">
+    </section>
+
+    <section class="part2">
+
+  
+
+  <div class="titulo">
+    <img class="instagram" src="https://github.com/SherilinM/lab-css-instagram-clone/blob/master/images/brand.png?raw=true" alt="logodeinstagram">
+    </div>
+
+   <div class="homeimg">
+    <img class="homeimg" src="https://github.com/SherilinM/lab-css-instagram-clone/blob/master/images/home.png?raw=true" alt="home-image">
+   </div> 
+  
+   <div class="home">
+    <a class="home" href="#">Login In</a> 
+   </div>
+
+
+    <article class="information">
+
+      <div>
+     <h1>
+      Capture and Share the World's Moments 
+     </h1> 
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+        Jobs Privacy Terms 
+      </p>
+      </div>
+    
+    <div class="botones">
+      <img class="apple" src="https://github.com/SherilinM/lab-css-instagram-clone/blob/master/images/badge-iphone.png?raw=true" alt="logo-apple">
+      <img class="android" src="https://github.com/SherilinM/lab-css-instagram-clone/blob/master/images/badge-android.png?raw=true" alt="logo-android">
+    </div>
+    </article>
+
+  </header>
+
+
+<nav class="nav-bar">
+  <ul class="nav-bar-ul">
+    <li> <a href="#">About Us</a> </li>
+    <li> <a href="#">Support</a> </li>
+    <li> <a href="#">Blog</a> </li>
+    <li> <a href="#">Press</a> </li>
+    <li> <a href="#">Api</a> </li>
+    <li> <a href="#">Jobs</a> </li>
+    <li> <a href="#">Privacy</a> </li>
+    <li> <a href="#">Termns</a> </li>
+    <li> &copy; 2014 Instagram </li>
+  </ul>
+</nav>
+
   </body>
 </html>
