--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
+
+
+
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<section class="flexbox-header">
+  <div class="width-phones">
+    <img src="./images/phones.png" alt="Phones_imagen">
+  </div>
+  <div class="width-sections">
+    <article class="head_instagram">
+      <img class="instagram-logo" src="./images/brand.png" alt="Logo_instagram">
+      <a class="bottom-log" href="#">
+      <img src="./images/home.png" alt="">
+      Log in</a>
+    </article>
+    <article class="text">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family.</p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div class="app-stores">
+        <img src="./images/badge-iphone.png" alt="apple-store">
+        <img src="./images/badge-android.png" alt="google-play">
+      </div>
+    </article>
+  </div>
+</section>
+  <footer>
+    <ul>
+      <li><a href="·">About Us</a></li>
+      <li><a href="·">Support</a></li>
+      <li><a href="·">Blog</a></li>
+      <li><a href="·">Press</a></li>
+      <li><a href="·">API</a></li>
+      <li><a href="·">Jobs</a></li>
+      <li><a href="·">Privacy</a></li>
+      <li><a href="·">Terms</a></li>
+      <li class="final-footer"> &copy; 2014 Instagram</li>
+    </ul>
+  </footer>
   </body>
 </html>
