--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  
+    <section1 class="section1">
+      <article><img src="images\phones.png" alt="iPhone image"></article>
+      <article class="articleRight">
+        <div class="top">
+          <img src="images\brand.png" alt="Logo">
+          <div class="button">
+            <img src="images\home.png" alt="house-login">
+            <a href="#">Log in</a>
+          </div>
+        </div>
+        <div class="white-box">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> fun way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="download">
+            <img src="images\badge-iphone.png" alt="badge-android">
+            <img src="images\badge-android.png" alt="badge-iphone">
+          </div>
+        </div>
+      </article>
+
+    </section1>
+
+    <section2>
+      <ul class="footer">
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>Api</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="instagram">© 2014 Instagram</li>
+      </ul>
+    </section2>
   </body>
 </html>
