--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <section class="smartphone">
+        <img src="images/phones.png" alt="iPhone">
+      </section>
+      <section class="content">
+        <header>
+          <img src="images/brand.png" alt="">
+          <a class="button" href=""> <img src="images/home.png" alt="home"> Log in</a>
+        </header>
+        <article class="details">
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <div class="text-container">
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life withfriends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="buttons">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play ">
+          </div>
+        </article>
+      </section>
+    </div>
+    <footer>
+      <nav>
+        <a href="">About Us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+      </nav>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
