--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+
+      <section class="main-section">
+
+        <div class="container-left">
+          <img src="./images/phones.png">
+        </div>
+
+        <div class="container-right">
+          <div class="container-right-header">
+            <img src="./images/brand.png">
+            <span class="login">
+              <img src="./images/home.png">
+              <a href="">Log in</a>
+            </span>
+          </div>
+          <div class="container-right-main">
+            <h1>Capture and Share<br>the World's Moments</h1>
+            <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="container-right-bottom">
+            <img src="./images/badge-iphone.png">
+            <img src="./images/badge-android.png">
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <a href="">About Us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+        <span>&copy; 2014 Instagram</span>
+      </footer>
+
+    </div>
   </body>
 </html>
