--- a/index.html
+++ b/index.html
@@ -3,14 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="main" >
+      <section id="left">
+        <img src="images/phones.png" id="phones" alt="app preview">
+      </section>
+      <section id="right">
+        <section id="logo-container">
+          <img src="images/brand.png" alt="Instagram">
+          <a href="#" id="login" alt="Log In">Log In</a>
+        </section>
+        <section id="info">
+          <article class="content">
+          <h2>Capture and Share the World's Moments </h2>
+          <p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with
+          friends and family. </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p><br />
+          <a href="#appstore" id="app-store"></a>
+          <a href="#android" id="play-store"></a>
+          </article>
+          <!-- <img src="images/badge-iphone.png" alt="Download on iPhone">
+          <img src="images/badge-android.png" alt="Download on Android"> -->
+        </section>
+      </section>
+    </div>
+    <footer>
+      <ul>
+        <li><a href=#">About Us</a></li>
+        <li><a href=#">Support</a></li>
+        <li><a href=#">Blog</a></li>
+        <li><a href=#">Press</a></li>
+        <li><a href=#">API</a></li>
+        <li><a href=#">Jobs</a></li>
+        <li><a href=#">Privacy</a></li>
+        <li><a href=#">Terms</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+              <!-- &copy; 2014 Instagram -->
+    </footer>
   </body>
 </html>
