--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+    <main>    
+
+      <div class="left-body">
+        <img src="./images/phones.png" alt="image of mobile phones">
+      </div>
+
+      <div class="right-body">
+
+        <div id="right-body-header">
+          <div id="instagram-logo">
+            <img src="./images/brand.png" alt="Instram brand image">
+          </div>
+          <div id="login-button">
+            <img src="./images/home.png" alt="home image" id="home-image">
+            <a href="#login">Log in</a>
+          </div>
+        </div>
+
+        <div id="right-body-middle">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+
+        <div id="right-body-footer-images">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store">
+          <img src="./images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+
+    </main>
+
+    <footer>
+
+      <div id="footer-links">
+        <ul>
+          <li><a href="#About us"></a>ABOUT US</li>
+          <li><a href="#Support"></a>SUPPORT</li>
+          <li><a href="#Blog"></a>BLOG</li>
+          <li><a href="#Api"></a>API</li>
+          <li><a href="#Jobs"></a>JOBS</li>
+          <li><a href="#Privacy"></a>PRIVACY</li>
+        </ul>
+      </div>
+      <div>
+        &copy; 2014 Instagram
+      </div>
+
+    </footer>
+
+  </body>  
+
 </html>
